--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <nav>
             <a href="#about" onclick="showSection('about')">[ABOUT_ME]</a>
             <a href="#experience" onclick="showSection('experience')">[EXPERIENCE]</a>
-            <a href="#projects" onclick="showSection('projects')">[PROJECTS]</a>
+            <a href="#projects" onclick="showSection('projects')">[Activity]</a>
         </nav>
 
         <!-- Terminal Prompt -->
@@ -128,7 +128,7 @@
                     Hi, I'm Lux, a Cybersecurity Analyst with 2+ years of experience in ethical hacking, penetration testing, and network security. I specialize in identifying vulnerabilities and securing systems against cyber threats.
                 </p>
                 <p>
-                    > SKILLS: Penetration Testing · Network Security · Incident Response · Cryptography
+                    > SKILLS: Penetration Testing · Network Security · Security Audit & Risk Assessment · Web Application Security
                 </p>
             </div>
         </section>
@@ -139,25 +139,48 @@
             <div>
                 <h2>> EXPERIENCE</h2>
                 <p>
-                    <strong>> Senior Cybersecurity Analyst</strong><br> XYZ Corp (2020 - Present)<br> - Conducted penetration tests on enterprise networks.<br> - Developed incident response plans.<br> - Trained staff on security best practices.
+                    <strong>> Cybersecurity Analyst | IT Auditor </strong><br>Telecommunications (2023 - Present)<br> - Conducted vulnerability assessments and penetration tests on networks, web, and mobile applications.<br> - Designed and rolled out
+                    a cybersecurity awareness program for over 3,000 employees.<br> - Conducted phishing campaigns to enhance cybersecurity awareness among staff.<br> - Participated as a Security Auditor in IT audits, ensuring ISO/IEC 27001 compliance.
+                    <br> - Acted as an Internal Auditor for cross-departmental projects to promote compliance and process improvement.<br> - Managed contracts to ensure alignment with business and operational needs.
                 </p>
                 <p>
-                    <strong>> Junior Penetration Tester</strong><br> ABC Security (2018 - 2020)<br> - Identified vulnerabilities in web applications.<br> - Assisted in red team exercises.<br> - Wrote detailed security reports.
+                    <strong>> Web Developer </strong><br> MYANMAR CO., LTD (2022 - 2022)<br> - Collaborated with cross-functional teams, including designers, product managers, and developers, to ensure seamless communication and project success.
+                    <br> - Designed, developed, and maintained responsive, dynamic websites and web applications using modern technologies and frameworks.
+                    <br> - Wrote clean, efficient code with thorough testing and debugging to ensure high performance, security, and user experience across browsers and devices.
+                    <br> - Managed tasks and met deadlines in a fast-paced environment, ensuring timely project completion.
+                    <br> - Communicated progress and challenges effectively with stakeholders.
+                </p>
+                <p>
+                    <strong>> Media Buyer </strong><br>Ultra Digital (2022 - 2022)<br> - Created data-driven campaigns with advanced targeting across digital platforms.
+                    <br> - Developed media buying strategies to maximize ROI and meet objectives.
+                    <br> - Reported on campaign performance, providing insights and improvement recommendations.
+                    <br> - Managed advertising budgets to ensure cost-effective performance.
+                    <br> - Optimized campaigns for reach, engagement, and conversions.
                 </p>
             </div>
         </section>
 
         <!-- Projects Section -->
         <section id="projects">
-            <div class="hacking">Loading Projects...</div>
+            <div class="hacking">Loading Activity...</div>
             <div>
-                <h2>> PROJECTS</h2>
+                <h2>> Cybersecurity Activity</h2>
                 <p>
-                    <strong>> Enterprise Network Security</strong><br> - Designed and implemented a secure network infrastructure for a Fortune 500 company.<br> - Reduced vulnerabilities by 80%.
+                    <strong>> Joining MetaCTF Flash CTF December 2024 </strong>
                 </p>
                 <p>
-                    <strong>> Vulnerability Assessment Tool</strong><br> - Developed an automated tool to scan for vulnerabilities in web applications.<br> - Increased testing efficiency by 50%.
+                    <strong>> Advent of Cyber 2024 (Tryhackme) </strong>
                 </p>
+                <p>
+                    <strong>> Participate as local auditor in  IT audit project</strong>
+                </p>
+                <p>
+                    <strong>> Monthly Top 10 in Hackthebox and Tryhackme</strong>
+                </p>
+                <p>
+                    <strong>> Conducting cyberawarness content and phishing simulation every months</strong>
+                </p>
+
             </div>
         </section>
     </div>
@@ -185,6 +208,5 @@
         }
     </script>
 </body>
-<footer>blind 2</footer>
 
 </html>
