--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         
         .hacking {
             background-color: #002200;
-            padding: 10px;
+            padding: 5px;
             border: 1px solid #00ff00;
             margin-top: 20px;
         }
@@ -144,7 +144,7 @@
                     <br> - Acted as an Internal Auditor for cross-departmental projects to promote compliance and process improvement.<br> - Managed contracts to ensure alignment with business and operational needs.
                 </p>
                 <p>
-                    <strong>> Web Developer </strong><br> MYANMAR CO., LTD (2022 - 2022)<br> - Collaborated with cross-functional teams, including designers, product managers, and developers, to ensure seamless communication and project success.
+                    <strong>> Web Developer </strong><br> MYANMAR CO., LTD (2022 - 2022)
                     <br> - Designed, developed, and maintained responsive, dynamic websites and web applications using modern technologies and frameworks.
                     <br> - Wrote clean, efficient code with thorough testing and debugging to ensure high performance, security, and user experience across browsers and devices.
                     <br> - Managed tasks and met deadlines in a fast-paced environment, ensuring timely project completion.
@@ -154,7 +154,6 @@
                     <strong>> Media Buyer </strong><br>Ultra Digital (2022 - 2022)<br> - Created data-driven campaigns with advanced targeting across digital platforms.
                     <br> - Developed media buying strategies to maximize ROI and meet objectives.
                     <br> - Reported on campaign performance, providing insights and improvement recommendations.
-                    <br> - Managed advertising budgets to ensure cost-effective performance.
                     <br> - Optimized campaigns for reach, engagement, and conversions.
                 </p>
             </div>
