--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div>
                 <h2>> EXPERIENCE</h2>
                 <p>
-                    <strong>> Cybersecurity Analyst | GRC Analyst </strong><br>Telecommunications (2023 - Present)<br> - Conducted vulnerability assessments and penetration tests on networks, web, and mobile applications.<br> - Designed and rolled out
+                    <strong>> Cybersecurity Analyst | GRC Analyst </strong><br>Telecommunications (2023 - March 2025 )<br> - Conducted vulnerability assessments and penetration tests on networks, web, and mobile applications.<br> - Designed and rolled out
                     a cybersecurity awareness program for over 3,000 employees.<br> - Conducted phishing campaigns to enhance cybersecurity awareness among staff.<br> - Participated as a Security Auditor in IT audits, ensuring ISO/IEC 27001 compliance.
                     <br> - Acted as an Internal Auditor for cross-departmental projects to promote compliance and process improvement.<br> - Managed contracts to ensure alignment with business and operational needs.
                 </p>
