--- a/index.html
+++ b/index.html
@@ -243,6 +243,19 @@
                         </div>
                     </div>
                 </div>
+                <!-- Case Study 3 -->
+                <div class="glass-card rounded-lg overflow-hidden group md:col-span-2">
+                    <div class="p-6">
+                        <h3 class="text-2xl font-bold text-slate-100 mb-2">ISMS Audit & Control Hardening</h3>
+                        <p class="text-slate-400 mb-4">Led internal security audit initiatives based on ISO/IEC 27001. Identified critical gaps in the Information Security Management System (ISMS) and drove the remediation by implementing crucial controls, including MFA enforcement, stronger password policies, SSO integration, and privilege access management.</p>
+                        <div class="flex flex-wrap gap-2 mb-4">
+                           <span class="skill-tag text-sm font-medium py-1 px-3 rounded-md">ISO 27001</span>
+                           <span class="skill-tag text-sm font-medium py-1 px-3 rounded-md">Internal Audit</span>
+                           <span class="skill-tag text-sm font-medium py-1 px-3 rounded-md">Security Hardening</span>
+                           <span class="skill-tag text-sm font-medium py-1 px-3 rounded-md">Remediation</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -432,6 +445,4 @@
     </script>
 </body>
 </html>
-
-
 
